<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Register.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_marginRight="8dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:text="@string/required"
                    android:textSize="16sp" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:fontFamily="@font/queensidesmedium"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginVertical="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_heading"
                android:textSize="16sp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="10dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/ic_avatar160"/>
                <Button
                    android:id="@+id/upload_avatar_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_avatar"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyOutlinedTextInputLayout"
                android:hint="@string/name"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_edit_text"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Email"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold"-->
<!--                android:layout_marginHorizontal="16dp"-->
<!--                android:layout_marginVertical="8dp"/>-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:cardElevation="4dp"-->
<!--                android:layout_marginHorizontal="16dp"-->
<!--                android:layout_marginBottom="16dp">-->
<!--                <EditText-->
<!--                    android:id="@+id/email_edit_text"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="Email"-->
<!--                    android:textSize="18sp"/>-->
<!--            </androidx.cardview.widget.CardView>-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyOutlinedTextInputLayout"
                android:hint="@string/email"
                android:layout_marginHorizontal="16dp"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_edit_text"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"/>

                <RadioGroup
                    android:id="@+id/radioGroupGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp">

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="16sp"
                        app:buttonTint="@color/secondary_stroke_blue"/>

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"
                        app:buttonTint="@color/secondary_stroke_blue"/>


                </RadioGroup>
                <EditText
                    android:id="@+id/setErrorEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:padding="6dp"
                    android:background="@drawable/custom_edit_text_2">

                </EditText>
            </LinearLayout>

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Phone Number"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold"-->
<!--                android:layout_marginHorizontal="16dp"-->
<!--                android:layout_marginVertical="8dp"/>-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->
<!--                <ImageView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:src="@drawable/vietnam"-->
<!--                    android:layout_marginLeft="16dp"-->
<!--                    android:gravity="center_vertical"/>-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:text="+84"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textStyle="bold"-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:layout_marginLeft="8dp"/>-->
<!--                <androidx.cardview.widget.CardView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    app:cardElevation="4dp"-->
<!--                    android:layout_marginHorizontal="16dp">-->
<!--                    <EditText-->
<!--                        android:id="@+id/phone_number_edit_text"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:hint="Phone Number"-->
<!--                        android:textSize="18sp"/>-->
<!--                </androidx.cardview.widget.CardView>-->
<!--            </LinearLayout>-->
            <com.fredporciuncula.phonemoji.PhonemojiTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyOutlinedTextInputLayout"
                android:hint="@string/phone_number"
                android:layout_marginHorizontal="16dp"

                >
                <com.fredporciuncula.phonemoji.PhonemojiTextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone_number_edit_text"
                    android:textColor="@color/black"/>
            </com.fredporciuncula.phonemoji.PhonemojiTextInputLayout>

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="License Number"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold"-->
<!--                android:layout_marginHorizontal="16dp"-->
<!--                android:layout_marginVertical="8dp"/>-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:cardElevation="4dp"-->
<!--                android:layout_marginHorizontal="16dp"-->
<!--                android:layout_marginBottom="16dp">-->
<!--                <EditText-->
<!--                    android:id="@+id/license_number_edit_text"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="License Number"-->
<!--                    android:textSize="18sp"/>-->
<!--            </androidx.cardview.widget.CardView>-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyOutlinedTextInputLayout"
                android:hint="@string/license_number"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/license_number_edit_text"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="32dp"
                android:text="@string/next" />

            <TextView
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/already_have_an_account"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/secondary_stroke_blue"
                android:textAllCaps="false"
                android:gravity="center"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>