<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Activities.Register.Fragment.RegisterAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:baselineAligned="true">
        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:padding="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginRight="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required"
            android:textSize="16sp" />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineProvider="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter Password"
                android:textStyle="bold"
                android:layout_marginVertical="16dp"
                android:textSize="32sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_heading"
                android:textSize="16sp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="10dp"
                android:layout_marginBottom="15dp"/>

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Email"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold"-->
<!--                android:layout_marginVertical="8dp" />-->

<!--            <TextView-->
<!--                android:id="@+id/email"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="example@gmail.com"-->
<!--                android:textSize="22sp"-->
<!--                android:textStyle="bold"-->
<!--                android:layout_marginVertical="8dp" />-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyOutlinedTextInputLayout"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:hint="@string/email"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:textColor="@color/black"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Password"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold"-->
<!--                android:layout_marginVertical="8dp" />-->
<!--            <EditText-->
<!--                android:id="@+id/password_edit_text"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="Password" />-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyOutlinedTextInputLayout"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:hint="@string/password"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_edit_text"
                    android:textColor="@color/black"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Confirm Password"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold"-->
<!--                android:layout_marginVertical="8dp" />-->
<!--            <EditText-->
<!--                android:id="@+id/confirm_password_edit_text"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="Confirm Password" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyOutlinedTextInputLayout"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:hint="@string/confirm_password"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirm_password_edit_text"
                    android:textColor="@color/black"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="16dp"
                android:gravity="right">
<!--                <Button-->
<!--                    android:id="@+id/register_button"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Register"/>-->
                <Button
                    android:layout_marginTop="50dp"
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/done"
                    app:backgroundTint="@color/secondary_stroke_blue"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>